--- a/index.html
+++ b/index.html
@@ -16,13 +16,18 @@
         </div>
     
         <a class="button" href="">
-            <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/2889/2889676.png" style="position: absolute; left: 225px; top: 197px;">
+            <img class="button_icon2" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/2889/2889676.png">
             <span class="button_text">Login</span>
         </a>
 
         <a class="button" href="">
-            <img class="button_icon" width="30px" height="30px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/22/OOjs_UI_icon_key.svg/1024px-OOjs_UI_icon_key.svg.png" style="position: absolute; left: 225px; top: 275px;">
+            <img class="button_icon" width="30px" height="30px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/22/OOjs_UI_icon_key.svg/1024px-OOjs_UI_icon_key.svg.png">
             <span class="button_text">Sign Up</span>
         </a>
+
+        <div class="philosophy">
+            <h1>Made by students, for students.</h1>
+            <h3>HackCamp 2023</h3>
+        </div>
 </html>
 
