older version w/ footer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
         <title>Lock In</title>
         <link rel="icon" type="images/x-icon" href="https://mario.wiki.gallery/images/thumb/d/d6/Captain_toad_powerstar.png/150px-Captain_toad_powerstar.png">
-
+    
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
      <body>
@@ -29,5 +29,15 @@
             <h1>Made by students, for students.</h1>
             <h3>HackCamp 2023</h3>
         </div>
+        <footer class="footer">
+            <div class="column">
+                <p>Created by: Julian, Michael, and Manveer</p>
+            </div>
+            <div class="column">
+                <a class="discord_button" href="">
+                    <img src="https://static-00.iconduck.com/assets.00/discord-icon-2048x2048-nnt62s2u.png" width="30px" height="30px"alt="buttonpng" />
+                </a>
+            </div>
+          </footer>
 </html>
 
