--- a/src/signup.html
+++ b/src/signup.html
@@ -10,7 +10,7 @@
     </head>
     <ul>
         <div class="header">
-            <img class="logo" width="60px" height="60px" src="https://songsofsyx.com/wiki/images/9/9e/Lock_icon.png">
+            <img class="logo" width="60px" height="60px" src="https://media.discordapp.net/attachments/1042563702802624563/1175900861210304523/lockedin.png?ex=656cea04&is=655a7504&hm=10007c510ee094159eddb634651682524da3679cc012bc1133c1ff39f08d712f&=&width=520&height=565">
             <h2 class="title">Sign Up</h2>
         </div>
         <div class="loginformation">
@@ -27,3 +27,4 @@
             <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/0/340.png">
             <span class="button_text">Return</span>
         </a>
+</html>
