--- a/src/login.html
+++ b/src/login.html
@@ -2,25 +2,27 @@
 <html>
 <head>
         <title>Lock In</title>
-        <link rel="icon" type="images/x-icon" href="https://mario.wiki.gallery/images/thumb/d/d6/Captain_toad_powerstar.png/150px-Captain_toad_powerstar.png">
+        <link rel="icon" type="images/x-icon" href="https://songsofsyx.com/wiki/images/9/9e/Lock_icon.png">
 
         <link href="style.css" rel="stylesheet" type="text/css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
      <body>
 
     </body>
     <ul>
         <div class="header">
-            <img class="logo" width="60px" height="60px" src="https://songsofsyx.com/wiki/images/9/9e/Lock_icon.png">
+            <img class="logo" width="60px" height="70px" src="https://media.discordapp.net/attachments/1042563702802624563/1175900861210304523/lockedin.png?ex=656cea04&is=655a7504&hm=10007c510ee094159eddb634651682524da3679cc012bc1133c1ff39f08d712f&=&width=520&height=565">
             <h2 class="title">Lock In</h2>
         </div>
     
-        <a class="button" href="">
+        <a class="button" href="loginfo.html">
             <img class="button_icon2" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/2889/2889676.png">
             <span class="button_text">Login</span>
         </a>
 
-        <a class="button" href="">
+        <a class="button" href="signup.html">
             <img class="button_icon" width="30px" height="30px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/22/OOjs_UI_icon_key.svg/1024px-OOjs_UI_icon_key.svg.png">
             <span class="button_text">Sign Up</span>
         </a>
