--- a/src/home.html
+++ b/src/home.html
@@ -9,13 +9,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <img class="profilepicture" width="300px" height="300px" src="https://media.discordapp.net/attachments/1042563702802624563/1175881546444579027/image.png?ex=656cd807&is=655a6307&hm=ab4fc5ecd1aca706643546f001d78fceb068be96bed616d2e5027e3f822ecc38&=&width=526&height=531">
-    <h1>Hello, Manveer!</h1>
-    <a class="buttonnoncenter" href="">
+
+   <div class="greetings">
+    <h1>Hello, Manveer07!</h1>
+   </div>
+
+    <a class="button" href="">
         <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/2889/2889676.png">
         <span class="button_text">Lock In</span>
     </a>
     <br>
-    <a class="buttonnoncenter" href="login.html">
+    <a class="button" href="filters.html">
+        <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/613/613307.png">
+        <span class="button_text">Studying Topics</span>
+    </a>
+    <br>
+    <a class="button" href="login.html">
         <img class="button_icon" width="30px" height="30px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/22/OOjs_UI_icon_key.svg/1024px-OOjs_UI_icon_key.svg.png">
         <span class="button_text">Sign Out</span>
     </a>
