--- a/src/home.html
+++ b/src/home.html
@@ -14,7 +14,7 @@
     <h1>Hello, Manveer07!</h1>
    </div>
 
-    <a class="button" href="">
+    <a class="button" href="lockin.html">
         <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/2889/2889676.png">
         <span class="button_text">Lock In</span>
     </a>
