trying to do lockin.html page

--- a/src/lockin.html
+++ b/src/lockin.html
@@ -8,14 +8,23 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <ul>
         <div class="header">
             <img class="logo" width="60px" height="70px" src="https://media.discordapp.net/attachments/1042563702802624563/1175900861210304523/lockedin.png?ex=656cea04&is=655a7504&hm=10007c510ee094159eddb634651682524da3679cc012bc1133c1ff39f08d712f&=&width=520&height=565">
             <h2 class="title">Lock In</h2>
         </div>
         <div class="greetings">
-        <h1>USERS GO HERE</h1>
-    </div>
+            <h1>USERS GO HERE pfp, name, location, subject</h1>
+        </div>
+        <ul class="list_group">
+            <li class="list_group_item">
+                <img class="profile_photo" src="../images/pfp1.png" height="30px" width="15px">
+                <span class="profile_text">Donald Trump</span>
+            </li>
+            <li class="list_group_item">Dapibus ac facilisis in</li>
+            <li class="list_group_item">Morbi leo risus</li>
+            <li class="list_group_item">Porta ac consectetur ac</li>
+            <li class="list_group_item">Vestibulum at eros</li>
+        </ul>
     <a class="button" href="home.html">
         <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/0/340.png">
         <span class="button_text">Return</span>
