--- a/src/login.html
+++ b/src/login.html
@@ -2,18 +2,16 @@
 <html>
 <head>
         <title>Lock In</title>
-        <link rel="icon" type="images/x-icon" href="https://songsofsyx.com/wiki/images/9/9e/Lock_icon.png">
+        <link rel="icon" type="images/x-icon" href="https://mario.wiki.gallery/images/thumb/d/d6/Captain_toad_powerstar.png/150px-Captain_toad_powerstar.png">
 
         <link href="style.css" rel="stylesheet" type="text/css">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
      <body>
 
-    </body>
+    </body> 
     <ul>
         <div class="header">
-            <img class="logo" width="60px" height="70px" src="https://media.discordapp.net/attachments/1042563702802624563/1175900861210304523/lockedin.png?ex=656cea04&is=655a7504&hm=10007c510ee094159eddb634651682524da3679cc012bc1133c1ff39f08d712f&=&width=520&height=565">
+            <img class="logo" width="60px" height="60px" src="https://songsofsyx.com/wiki/images/9/9e/Lock_icon.png">
             <h2 class="title">Lock In</h2>
         </div>
     
@@ -37,7 +35,7 @@
             </div>
             <div class="column">
                 <a class="discord_button" href="">
-                    <img src="https://cdn-icons-png.flaticon.com/512/4945/4945914.png" width="50px" height="50px"/>
+                    <img src="https://cdn-icons-png.flaticon.com/512/4945/4945914.png" width="30px" height="30px"/>
                 </a>
             </div>
           </footer>
