--- a/src/loginfo.html
+++ b/src/loginfo.html
@@ -19,10 +19,10 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password">
         </div>
-        <a class="button" href="home.html">
+        <button id="login-button" class="button">
             <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/5527/5527000.png">
             <span class="button_text">Submit</span>
-        </a>
+        </button>
         <a class="button" href="login.html">
             <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/0/340.png">
             <span class="button_text">Return</span>
@@ -31,4 +31,6 @@
             <h1>Made by students, for students.</h1>
             <h3>HackCamp 2023</h3>
         </div>
+
+        <script src="loginfo.js"></script>
 </html>
