--- a/src/lockin.html
+++ b/src/lockin.html
@@ -15,17 +15,20 @@
         <div class="greetings">
             <h1>USERS GO HERE pfp, name, location, subject</h1>
         </div>
-        <ul class="list_group">
-            <li class="list_group_item">
-                <img class="profile_photo" src="../images/pfp1.png" height="30px" width="15px">
-                <span class="profile_text">Donald Trump</span>
-            </li>
-            <li class="list_group_item">Dapibus ac facilisis in</li>
-            <li class="list_group_item">Morbi leo risus</li>
-            <li class="list_group_item">Porta ac consectetur ac</li>
-            <li class="list_group_item">Vestibulum at eros</li>
-        </ul>
-    <a class="button" href="home.html">
+        <div class="button">
+            <img class="button_icon" width="50px" height="150px" src="../images/pfp1.png">
+            <span class="button_text">placeholder_text</span>
+        </div>
+        <br>
+        <a class="button" href="filters.html">
+            <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/613/613307.png">
+            <span class="button_text">Studying Topics</span>
+        </a>
+        <br>
+        <a class="button" href="login.html">
+            <img class="button_icon" width="30px" height="30px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/22/OOjs_UI_icon_key.svg/1024px-OOjs_UI_icon_key.svg.png">
+            <span class="button_text">Sign Out</span>
+        <a class="button" href="home.html">
         <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/0/340.png">
         <span class="button_text">Return</span>
     </a>
