--- a/src/signup.html
+++ b/src/signup.html
@@ -13,16 +13,17 @@
             <img class="logo" width="60px" height="60px" src="https://media.discordapp.net/attachments/1042563702802624563/1175900861210304523/lockedin.png?ex=656cea04&is=655a7504&hm=10007c510ee094159eddb634651682524da3679cc012bc1133c1ff39f08d712f&=&width=520&height=565">
             <h2 class="title">Sign Up</h2>
         </div>
+        <p class="loginformation"><strong>We are currently not accepting new registrations. Sorry.</strong></p>
         <div class="loginformation">
         <label for="fname">Username to use:</label>
-        <input type="text" id="uname" name="uname"><br><br>
+        <input type="text" id="uname" name="uname" disabled><br><br>
         <label for="password">Password (remember this!):</label>
-        <input type="password" id="password" name="password">
+        <input type="password" id="password" name="password" disabled>
         </div>
-        <a class="button" href="">
+        <button class="button" disabled style="opacity: 0.3;">
             <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/5527/5527000.png">
             <span class="button_text">Submit</span>
-        </a>
+        </button>
         <a class="button" href="login.html">
             <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/0/340.png">
             <span class="button_text">Return</span>
