filter and password functionality

--- a/src/filters.html
+++ b/src/filters.html
@@ -14,10 +14,6 @@
     <h1>Hello, Manveer07!</h1>
    </div>
 
-<div class="greetings">
-    <p>Topics</p>
-</div>
-
    <div class="checkboxes">
     <label>
       <input type="checkbox" name="interest" value="programming">
@@ -33,21 +29,24 @@
       <input type="checkbox" name="interest" value="gaming">
       Arts
     </label>
-    </div>
-    <div class="greetings">
-        <p>Location</p>
-    </div>
-    <div class="location">
+  </div>
+
+  <div class="greetings">
+    <p>Location</p>
+  </div>
+
+  <div class="location">
     <label for="locations"></label>
-        <input type="text" id="loc" name="loc"><br><br>
-    </div>
-    <a class="button" href="home.html">
-        <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/5527/5527000.png">
-        <span class="button_text">Submit</span>
-    </a>
+    <input type="text" id="loc" name="loc"><br><br>
+  </div>
+
+  <a class="button" href="#" id="submitBtn">
+    <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/5527/5527000.png">
+    <span class="button_text">Submit</span>
+  </a>
+  <a class="button" href="home.html">
+    <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/0/340.png">
+    <span class="button_text">Return</span>
     
-    <a class="button" href="home.html">
-        <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/0/340.png">
-        <span class="button_text">Return</span>
-    </a>
+  <script src="filtermemory.js"></script>
 </html>
