--- a/src/login.html
+++ b/src/login.html
@@ -35,8 +35,8 @@
                 <p>Created by: Julian, Michael, and Manveer</p>
             </div>
             <div class="column">
-                <a class="discord_button" href="">
-                    <img src="https://cdn-icons-png.flaticon.com/512/4945/4945914.png" width="50px" height="50px"/>
+                <a class="nwplus_button" href="https://nwplus.io/">
+                    <img src="https://derekchen.dev/static/media/nwPlus.3cd9d6f5.png" width="50px" height="50px"/>
                 </a>
             </div>
           </footer>
