--- a/src/home.html
+++ b/src/home.html
@@ -19,6 +19,11 @@
         <span class="button_text">Lock In</span>
     </a>
     <br>
+    <a class="button" href="conversations.html">
+        <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/953/953810.png">
+        <span class="button_text">Conversations</span>
+    </a>
+    <br>
     <a class="button" href="filters.html">
         <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/613/613307.png">
         <span class="button_text">Studying Topics</span>
