--- a/src/lockin.html
+++ b/src/lockin.html
@@ -15,21 +15,22 @@
         <div class="greetings">
             <h1>USERS GO HERE pfp, name, location, subject</h1>
         </div>
-        <div class="button">
-            <img class="button_icon" width="50px" height="150px" src="../images/pfp1.png">
-            <span class="button_text">placeholder_text</span>
+        <div>
+            <div class="button">
+                <img class="button_icon" width="50px" height="150px" src="../images/pfp1.png">
+                <span class="button_text">placeholder_text</span>
+            </div>
+            <div class="button">
+                <img class="button_icon" width="50px" height="150px" src="../images/pfp1.png">
+                <span class="button_text">placeholder_text</span>
+            </div>
+            <div class="button">
+                <img class="button_icon" width="50px" height="150px" src="../images/pfp1.png">
+                <span class="button_text">placeholder_text</span>
+            </div>
         </div>
-        <br>
-        <a class="button" href="filters.html">
-            <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/613/613307.png">
-            <span class="button_text">Studying Topics</span>
-        </a>
-        <br>
-        <a class="button" href="login.html">
-            <img class="button_icon" width="30px" height="30px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/22/OOjs_UI_icon_key.svg/1024px-OOjs_UI_icon_key.svg.png">
-            <span class="button_text">Sign Out</span>
         <a class="button" href="home.html">
-        <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/0/340.png">
-        <span class="button_text">Return</span>
-    </a>
+            <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/0/340.png">
+            <span class="button_text">Return</span>
+        </a>
 </html>
