--- a/src/lockin.html
+++ b/src/lockin.html
@@ -12,22 +12,28 @@
             <img class="logo" width="60px" height="70px" src="https://media.discordapp.net/attachments/1042563702802624563/1175900861210304523/lockedin.png?ex=656cea04&is=655a7504&hm=10007c510ee094159eddb634651682524da3679cc012bc1133c1ff39f08d712f&=&width=520&height=565">
             <h2 class="title">Lock In</h2>
         </div>
-        <div class="greetings">
-            <h1>USERS GO HERE pfp, name, location, subject</h1>
-        </div>
         <div>
             <div class="button">
-                <img class="button_icon" width="50px" height="150px" src="../images/pfp1.png">
-                <span class="button_text">placeholder_text</span>
+                <span class="button_text">:D :name here:</span>
             </div>
+            <div class="greetings">
+                additional info goes here
+            </div>
+            <br>
             <div class="button">
-                <img class="button_icon" width="50px" height="150px" src="../images/pfp1.png">
-                <span class="button_text">placeholder_text</span>
+                <span class="button_text">:D :name here:</span>
             </div>
+            <div class="greetings">
+                additional info goes here
+            </div>
+            <br>
             <div class="button">
-                <img class="button_icon" width="50px" height="150px" src="../images/pfp1.png">
-                <span class="button_text">placeholder_text</span>
+                <span class="button_text">:D :name here:</span>
             </div>
+            <div class="greetings">
+                additional info goes here
+            </div>
+            <br>
         </div>
         <a class="button" href="home.html">
             <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/0/340.png">
