lots of functionality

--- a/src/filters.html
+++ b/src/filters.html
@@ -16,18 +16,28 @@
 
    <div class="checkboxes">
     <label>
-      <input type="checkbox" name="interest" value="programming">
+      <input type="checkbox" name="interest" value="Programming">
       Comp Sci
     </label>
 
     <label>
-      <input type="checkbox" name="interest" value="design">
+      <input type="checkbox" name="interest" value="Business">
       Business
     </label>
 
     <label>
-      <input type="checkbox" name="interest" value="gaming">
+      <input type="checkbox" name="interest" value="Arts">
       Arts
+    </label>
+
+    <label>
+      <input type="checkbox" name="interest" value="Mathematics">
+      Mathematics
+    </label>
+
+    <label>
+      <input type="checkbox" name="interest" value="English">
+      English
     </label>
   </div>
 
@@ -47,6 +57,6 @@
   <a class="button" href="home.html">
     <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/0/340.png">
     <span class="button_text">Return</span>
-    
+
   <script src="filtermemory.js"></script>
 </html>
