--- a/src/lockin.html
+++ b/src/lockin.html
@@ -12,31 +12,39 @@
             <img class="logo" width="60px" height="70px" src="https://media.discordapp.net/attachments/1042563702802624563/1175900861210304523/lockedin.png?ex=656cea04&is=655a7504&hm=10007c510ee094159eddb634651682524da3679cc012bc1133c1ff39f08d712f&=&width=520&height=565">
             <h2 class="title">Lock In</h2>
         </div>
-        <div>
-            <div class="button">
-                <span class="button_text">:D :name here:</span>
-            </div>
+        <div id="entries-list">
+            <!--<a class="button" href="conversations.html">
+                <span class="button_text">Julian07</span>
+            </a>
             <div class="greetings">
-                additional info goes here
+                <p>Subject: Comp Sci</p>
+                <br>
+                <p>Location: UBC Library</p>
             </div>
             <br>
-            <div class="button">
-                <span class="button_text">:D :name here:</span>
-            </div>
+            <a class="button" href="conversations.html">
+                <span class="button_text">Michael08</span>
+            </a>
             <div class="greetings">
-                additional info goes here
+                <p>Subject: Mathematics</p>
+                <br>
+                <p>Location: UBC Library</p>
             </div>
             <br>
-            <div class="button">
-                <span class="button_text">:D :name here:</span>
-            </div>
+            <a class="button" href="conversations.html">
+                <span class="button_text">ye214</span>
+            </a>
             <div class="greetings">
-                additional info goes here
+                <p>Subject: Arts</p>
+                <br>
+                <p>Location: Student Nest</p>
             </div>
-            <br>
+            <br>-->
         </div>
         <a class="button" href="home.html">
             <img class="button_icon" width="30px" height="30px" src="https://cdn-icons-png.flaticon.com/512/0/340.png">
             <span class="button_text">Return</span>
         </a>
+
+        <script src="lockin.js"></script>
 </html>
